aboutUs page - first commit

--- a/src/style-aboutUs.css
+++ b/src/style-aboutUs.css
@@ -87,6 +87,16 @@ body::-webkit-scrollbar-thumb:hover {
 /* ------------------------------------------- */
 /* ------------------------------------------- */
 
+#about-us-page .under-header-AboutUs {
+  
+}
+  
+/* ------------------------------------------- */
+/* ------------------------------------------- */
+/* ------------------------------------------- */
+/* ------------------------------------------- */
+/* ------------------------------------------- */
+
 /* LARGE - MEDIA QUERY START */
 /* LARGE - MEDIA QUERY START */
 /* LARGE - MEDIA QUERY START */
