--- a/src/style-aboutUs.css
+++ b/src/style-aboutUs.css
@@ -87,8 +87,122 @@ body::-webkit-scrollbar-thumb:hover {
 /* ------------------------------------------- */
 /* ------------------------------------------- */
 
-#about-us-page .under-header-AboutUs {
-  
+#about-us-page .about-us-container {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background: radial-gradient(#333, #000);
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+}
+
+/* ANIMATION IN THE BACKGROUND */
+#about-us-page .about-us-container .set {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+}
+
+/* ALL DIVS TOGETHER */
+#about-us-page .about-us-container .set div {
+  position: absolute;
+  display: block;
+}
+
+/* (1) */
+#about-us-page .about-us-container .set div:nth-child(1) {
+  left: 20%;
+  animation: falling 15s linear infinite;
+  animation-delay: -7s;
+}
+
+/* (2) */
+#about-us-page .about-us-container .set div:nth-child(2) {
+  left: 50%;
+  animation: falling 20s linear infinite;
+  animation-delay: -5s;
+}
+
+/* (3) */
+#about-us-page .about-us-container .set div:nth-child(3) {
+  left: 70%;
+  animation: falling 20s linear infinite;
+  animation-delay: 0s;
+}
+
+/* (4) */
+#about-us-page .about-us-container .set div:nth-child(4) {
+  left: 0%;
+  animation: falling 15s linear infinite;
+  animation-delay: -5s;
+}
+
+/* (5) */
+#about-us-page .about-us-container .set div:nth-child(5) {
+  left: 85%;
+  animation: falling 18s linear infinite;
+  animation-delay: -10s;
+}
+
+/* (6) */
+#about-us-page .about-us-container .set div:nth-child(6) {
+  left: 0%;
+  animation: falling 12s linear infinite;
+}
+
+/* (7) */
+#about-us-page .about-us-container .set div:nth-child(7) {
+  left: 15%;
+  animation: falling 14s linear infinite;
+}
+
+/* (8) */
+#about-us-page .about-us-container .set div:nth-child(8) {
+  left: 60%;
+  animation: falling 15s linear infinite;
+}
+
+@keyframes falling {
+  0%{
+    opacity:0;
+    top:-10%;
+    transform:translateX(20px)rotate(0deg);
+  }
+  10%{
+    opacity:1;
+  }
+  20%{
+    transform:translateX(-20px)rotate(90deg);
+  }
+  40%{
+    transform:translateX(-20px)rotate(45deg);
+  }
+  60%{
+    transform:translateX(20px)rotate(180deg);
+  }
+  80%{
+    transform:translateX(-20px)rotate(180deg);
+  }
+  100%{
+    top:110%;
+    transform:translateX(20px)rotate(225deg);
+  }
+}
+
+#about-us-page .set2 {
+  transform:scale(2) rotateY(180deg);
+  filter:blur(2px);
+}
+
+#about-us-page .set3 {
+  transform:scale(0.8) rotateY(180deg);
+  filter:blur(4px);
 }
   
 /* ------------------------------------------- */
