--- a/src/style-aboutUs.css
+++ b/src/style-aboutUs.css
@@ -118,7 +118,7 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 #about-us-page .under-header-AboutUs .central-container div.top h1 {
-  padding: 1em 0em;
+  padding: 0.5em 0em;
   font-size: 5em;
 }
 
@@ -180,7 +180,7 @@ body::-webkit-scrollbar-thumb:hover {
   height: 20%;
   display: flex;
   justify-content: center;
-  margin-bottom: 5em;
+  margin: 5em 0em;
 }
 
 #about-us-page .under-header-AboutUs .central-container div.bottom button {
@@ -377,8 +377,8 @@ body::-webkit-scrollbar-thumb:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 200px;
-  height: 200px;
+  width: 300px;
+  height: 300px;
   border-radius: 50%;
   padding: 1em;
   animation: spinning 10s linear infinite;
@@ -395,14 +395,15 @@ body::-webkit-scrollbar-thumb:hover {
 
 #about-us-page .three-box-container .top div h3 {
   margin: 2em 0em;
-  font-size: 1.5em;
+  font-size: 2.5em;
 }
 
 #about-us-page .three-box-container .top div p {
   width: 90%;
   margin:0 auto 1em auto;
-  font-size: 1.2em;
+  font-size: 1.5em;
   line-height: 40px;
+  letter-spacing: 2px;
 }
 
 /* BOTTOM */
@@ -447,7 +448,7 @@ body::-webkit-scrollbar-thumb:hover {
 #about-us-page .meet-our-staff-container {
   display: flex;
   flex-direction: column;
-  margin: 8em 0em;
+  margin: 5em 0em;
 }
 
 /* TOP */
