--- a/src/style-aboutUs.css
+++ b/src/style-aboutUs.css
@@ -112,6 +112,7 @@ body::-webkit-scrollbar-thumb:hover {
 
 /* TOP */
 #about-us-page .under-header-AboutUs .central-container div.top {
+  height: 20%;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -316,14 +317,14 @@ body::-webkit-scrollbar-thumb:hover {
 /* THREE BOX CONTAINER - START */
 
 /* INSIDE HERE THERE ARE 2 DIVS: TOP AND BOTTOM */
-#about-us-page .three-box-container {
+#about-us-page .three-box-container-aboutUs {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   margin: 5em 0em;
 }
 
-#about-us-page .three-box-container h1 {
+#about-us-page .three-box-container-aboutUs h1 {
   display: flex;
   justify-content: center;
   font-size: 4em;
@@ -331,7 +332,7 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 /* TOP */
-#about-us-page .three-box-container .top {
+#about-us-page .three-box-container-aboutUs .top {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
@@ -339,7 +340,7 @@ body::-webkit-scrollbar-thumb:hover {
   margin: 0 auto;
 }
 
-#about-us-page .three-box-container .top div {
+#about-us-page .three-box-container-aboutUs .top div {
   background-color: var(--pizza-green);
   color: var(--pizza-yellow);
   flex: 1 1 300px; 
@@ -357,7 +358,7 @@ body::-webkit-scrollbar-thumb:hover {
     4px 0 6px -1px rgba(9, 23, 54, 0.15);
 }
 
-/* #about-us-page .three-box-container .top div i {
+/* #about-us-page .three-box-container-aboutUs .top div i {
   display: flex;
   justify-content: center;
   background-color: var(--color-sidebar-top-box);
@@ -368,7 +369,7 @@ body::-webkit-scrollbar-thumb:hover {
   margin-top: 1em;
 } */
 
-#about-us-page .three-box-container .top div img {
+#about-us-page .three-box-container-aboutUs .top div img {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -388,21 +389,20 @@ body::-webkit-scrollbar-thumb:hover {
   }
 }
 
-#about-us-page .three-box-container .top div h3 {
+#about-us-page .three-box-container-aboutUs .top div h3 {
   margin: 2em 0em;
   font-size: 2.5em;
 }
 
-#about-us-page .three-box-container .top div p {
-  width: 90%;
-  margin:0 auto 1em auto;
+#about-us-page .three-box-container-aboutUs .top div p {
+  width: 100%;
   font-size: 1.5em;
   line-height: 40px;
   letter-spacing: 2px;
 }
 
 /* BOTTOM */
-#about-us-page .three-box-container .bottom {
+#about-us-page .three-box-container-aboutUs .bottom {
   margin: 5em 0em 0em 0em;
   display: flex;
   flex-direction: column;
@@ -411,11 +411,11 @@ body::-webkit-scrollbar-thumb:hover {
   text-align: center;
 }
 
-#about-us-page .three-box-container .bottom h2 {
+#about-us-page .three-box-container-aboutUs .bottom h2 {
   font-size: 4em;
 }
 
-#about-us-page .three-box-container .bottom p {
+#about-us-page .three-box-container-aboutUs .bottom p {
   width:80%;
   margin: 2em auto 0em auto;
   font-size: 2em;
