--- a/src/style-homepage.css
+++ b/src/style-homepage.css
@@ -460,6 +460,127 @@ body::-webkit-scrollbar-thumb:hover {
 /* ------------------------------------------- */
 /* ------------------------------------------- */
 
+/* THREE BOX CONTAINER - START */
+/* THREE BOX CONTAINER - START */
+/* THREE BOX CONTAINER - START */
+
+/* INSIDE HERE THERE ARE 2 DIVS: TOP AND BOTTOM */
+#homepage .three-box-container-homepage {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin: 5em 0em;
+}
+
+#homepage .three-box-container-homepage h1 {
+  display: flex;
+  justify-content: center;
+  font-size: 4em;
+  margin-bottom: 1em;
+}
+
+/* TOP */
+#homepage .three-box-container-homepage .top {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  width: 90%;
+  margin: 0 auto;
+}
+
+#homepage .three-box-container-homepage .top div {
+  background-color: var(--pizza-green);
+  color: var(--pizza-yellow);
+  flex: 1 1 300px; 
+  padding: 1em;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  box-shadow: 
+    0 -4px 6px -1px rgba(9, 23, 54, 0.15), 
+    0 4px 6px -1px rgba(9, 23, 54, 0.15), 
+    -4px 0 6px -1px rgba(9, 23, 54, 0.15), 
+    4px 0 6px -1px rgba(9, 23, 54, 0.15);
+}
+
+/* #homepage .three-box-container-homepage .top div i {
+  display: flex;
+  justify-content: center;
+  background-color: var(--color-sidebar-top-box);
+  color: var(--normal-white);
+  font-size: 2.5em;
+  border-radius: 50%;
+  padding: 1em;
+  margin-top: 1em;
+} */
+
+#homepage .three-box-container-homepage .top div img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  padding: 1em;
+  animation: spinning 10s linear infinite;
+}
+
+@keyframes spinning {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg); 
+  }
+}
+
+#homepage .three-box-container-homepage .top div h3 {
+  margin: 2em 0em;
+  font-size: 2.5em;
+}
+
+#homepage .three-box-container-homepage .top div p {
+  width: 70%;
+  font-size: 1.7em;
+  line-height: 40px;
+  letter-spacing: 1px;
+}
+
+/* BOTTOM */
+#homepage .three-box-container-homepage .bottom {
+  margin: 5em 0em 0em 0em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+#homepage .three-box-container-homepage .bottom h2 {
+  font-size: 4em;
+}
+
+#homepage .three-box-container-homepage .bottom p {
+  width:80%;
+  margin: 2em auto 0em auto;
+  font-size: 2em;
+  letter-spacing: 3px;
+  line-height: 50px;
+}
+
+/* THREE BOX CONTAINER - END */
+/* THREE BOX CONTAINER - END */
+/* THREE BOX CONTAINER - END */
+
+/* ------------------------------------- */
+/* ------------------------------------- */
+/* ------------------------------------- */
+/* ------------------------------------- */
+/* ------------------------------------- */
+
 /* JUMBOTRON STATIC IMAGE - START*/
 /* JUMBOTRON STATIC IMAGE - START*/
 /* JUMBOTRON STATIC IMAGE - START*/
@@ -798,7 +919,6 @@ body::-webkit-scrollbar-thumb:hover {
     margin-top: 1em;
   }
   
-  
   #homepage .jumbotron-scrolling-carousel section .container-right p {
     width: 100%;
   }
@@ -808,7 +928,7 @@ body::-webkit-scrollbar-thumb:hover {
   /* JUMBOTRON CONTAINER END */
   /* JUMBOTRON CONTAINER END */
   /* JUMBOTRON CONTAINER END */
-  
+
   /* ------------------------------------- */
   /* ------------------------------------- */
   /* ------------------------------------- */
