--- a/src/style-global.css
+++ b/src/style-global.css
@@ -127,8 +127,8 @@ body {
 }
 
 .my-button-first:hover {
-  background-color: var(--pizza-red);
-  color: var(--pizza-yellow);
+  background-color: var(--pizza-red) !important;
+  color: var(--pizza-yellow) !important;
 }
 
 .my-button-special {
@@ -215,7 +215,7 @@ header nav ul li {
   height: 55%;
   width: 23%;
   color: var(--pizza-dark);
-  background-color: var(--normal-white);
+  background-color: var(--pizza-beige);
   border: 1px solid var(--pizza-dark);
   position: relative;
 }
@@ -260,18 +260,14 @@ header nav ul li span:nth-child(4) {
 }
 
 header nav ul li span:last-of-type{
-  background-image: none;
-  background-size: none;
-  opacity: none;
   pointer-events: initial;
   height: initial;
-  width: initial;
   background-color: initial;
-  border-radius: none;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
+  padding: 10px 0px;
 }
 
 header nav ul li span:last-of-type h2 {
@@ -322,7 +318,7 @@ header nav ul li:hover {
 
 .banner {
   width: 100%;
-  height: 400px;
+  /* height: 400px; */
   margin: 100px 0px 0px 0px;
   background-image: linear-gradient(-45deg, var(--pizza-red), var(--pizza-green), var(--pizza-yellow), brown);
   background-size: 400% 400%;
@@ -352,9 +348,9 @@ header nav ul li:hover {
 }
 
 .banner section.banner-section {
-  width:90%;
-  height:80%;
-  margin:0 auto;
+  width: 90%;
+  height: 80%;
+  margin: 0 auto;
   justify-content: center;
   align-items: center;
   display: flex;
@@ -380,14 +376,16 @@ header nav ul li:hover {
 .banner section.banner-section .four img,
 .banner section.banner-section .five img {
   width: 100%;
-  height: 70%;
+  height: 15em;
+  max-height: 15em;
   display: flex;
   justify-content: center;
   align-items: center;
-  border:3px solid var(--pizza-yellow);
+  border: 3px solid var(--pizza-yellow);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  margin: 2em 0em;
 }
 
 /* The Overlay (background) */
@@ -401,16 +399,16 @@ header nav ul li:hover {
 
 .banner .overlay {
   display: none;
- height: 100vh;
- width: 100vw;
- position: fixed;
- z-index: 1000;
- left: 0;
- top: 0;
- background-color: rgb(0,0,0); 
- background-color: rgba(0,0,0, 0.9);
- overflow-x: hidden;
- transition: 0.5s;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0, 0.9);
+  overflow-x: hidden;
+  transition: 0.5s;
 }
 
 .banner .overlay-content {
@@ -556,11 +554,75 @@ header nav ul li:hover {
  color: var(--pizza-yellow);
 }
 
-/* BANNER END*/
-/* BANNER END*/
-/* BANNER END*/
-/* BANNER END*/
-/* BANNER END*/
+/* BANNER SLIDER - START */
+/* BANNER SLIDER - START */
+/* BANNER SLIDER - START */
+/* BANNER SLIDER - START */
+/* BANNER SLIDER - START */
+
+.banner.two {
+  padding: 0em 0em 5em 0em;
+  background: linear-gradient(to bottom right, var(--pizza-green), var(--pizza-dark));
+}
+
+.banner .banner-slider {
+  margin: 0 auto;
+  width: 90%;
+  border: 5px solid var(--pizza-beige);
+  display: flex;
+  overflow: hidden; 
+  gap: 0; 
+}
+
+.banner.two .top h2 {
+  margin-bottom: 2em;
+}
+
+.banner .banner-slider .group {
+  display: flex;
+  flex: 0 0 auto;
+  min-width: 100%; 
+  align-items: center;
+  animation: moving-left 15s linear infinite;
+  will-change: transform;
+}
+
+.banner .banner-slider .group .card {
+  width: 5em;
+  height: 5em;
+  flex-shrink: 0; 
+  /* padding: 1em; */
+  background: var(--pizza-yellow);
+  font-size: 3rem;
+  border-radius: .2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1em 0.5em;
+}
+
+.banner .banner-slider .group .card img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+
+@keyframes moving-left {
+  from { transform: translateX(0); }
+  to { transform: translateX(-100%); }
+}
+
+/* BANNER SLIDER - END */
+/* BANNER SLIDER - END */
+/* BANNER SLIDER - END */
+/* BANNER SLIDER - END */
+/* BANNER SLIDER - END */
+
+/* BANNER - END*/
+/* BANNER - END*/
+/* BANNER - END*/
+/* BANNER - END*/
+/* BANNER - END*/
 
 /* ------------------------------------------- */
 /* ------------------------------------------- */
