--- a/src/style-global.css
+++ b/src/style-global.css
@@ -575,7 +575,14 @@ header nav ul li:hover {
 }
 
 .banner.two .top h2 {
-  margin-bottom: 2em;
+  margin-bottom: 1em;
+  font-size: 2.5em;
+  letter-spacing: 3px;
+  color: var(--pizza-yellow);
+}
+
+.banner.two b.contact-now {
+  padding: 1em 0em 0em 0.2em !important;
 }
 
 .banner .banner-slider .group {
